# Velvet

./: .gitignore  CMakeLists.txt  README.md  build.bat
src/: Actor.hpp  Camera.hpp  Common.cuh  GUI.cpp  GameInstance.hpp  Helper.hpp  Light.hpp  Material.hpp  Resource.hpp  Scene.hpp  VtBuffer.hpp  main.cpp
